--- a/styleADD.css
+++ b/styleADD.css
@@ -29,68 +29,88 @@ body {
 /* Content Wrapper */
 .content-wrapper {
     width: 100%;
-    min-width: 1000px;
+    min-width: 1300px;
     height: 100vh;
     overflow: hidden;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+    display: flex;
 }
 
 /* Nav Wrapper */
 .nav-wrapper {
-    background-color: var(--white);
+    overflow: hidden;
+    z-index: 10;
+    background-color: var(--brown);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 3rem 0;
+    padding: 0rem;
     gap: 3rem;
-    border-right: 2px solid var(--black);
+    width: 0px;
+    transition: 0.1s ease-in-out;
+    position: relative;
+}
+.nav-wrapper * {
+    color: var(--white);
 }
 .icon-wrapper {
-    font-size: clamp(1.25rem, 0.7143rem + 1.7143vw, 2rem);
+    font-size: clamp(0.8rem, 0.5143rem + 0.9143vw, 1.2rem);
     font-weight: 900;
+
 }
 .nav-items {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    width: 100%;
 }
-.nav-items > button {
-    font-size: clamp(0.7rem, 0.4857rem + 0.6857vw, 1rem);
+.nav-items > div {
+    padding: 1rem 0.5rem;
     cursor: pointer;
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
-    border: unset;
-    font-weight: 600;
-    box-shadow: 0 2px 10px var(--grey);
-    transition: 200ms ease-in;
 }
-.nav-items > button:not(.active-btn) {
-    background-color: var(--pink);
-}
-/* Active Button */
+/* Active Div */
 .active-btn {
-    background-color: var(--brown);
+    background-color: rgba(255, 255, 255, 0.3);
     color: var(--white);
+    border-radius: 5px;
 }
-/* Button Hover */
-.nav-items > button:not(.active-btn):hover {
-    background-color: var(--brown);
-    color: var(--white);
+/* Div Hover */
+.nav-items > div:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+.close-nav {
+    position: absolute;
+    top: 1rem;
+    right: 2%;
+    font-size: 1.5rem;
 }
 
 
 /* Body Wrapper */
 .main-content {
     background-color: var(--white);
+    width: 100%;
     overflow: hidden auto;
     display: flex;
     flex-direction: column;
-    position: relative;
+}
+.main-content > *:not(.record-heading) {
     padding: 1rem 1%;
 }
 
 /* Main Content */
+.record-heading {
+    background-color: var(--brown);
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    padding: 1rem 1rem;
+}
+.internal-heading, .internal-heading * {
+    font-size: 1.3rem;
+    color: var(--white);
+}
 .main-heading {
     font-size: 2rem;
     font-weight: 900;
@@ -109,7 +129,7 @@ body {
     align-items: center;
     padding: 1rem;
     background-color: white;
-    box-shadow: 0 2px 10px var(--grey);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     position: relative;
 }
 .form-heading {
@@ -154,14 +174,14 @@ button {
     transition: 0.6s ease;
 }
 button:hover {
-    scale: 1.1;
+    text-decoration: underline;
 }
 .backbtn {
     position: absolute;
     top: 1rem;
     left: 1rem;
     border: none;
-    box-shadow: 0 0 10px 1px grey;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     background-color: var(--black);
     border-radius: 50%;
     width: 2rem;
@@ -179,7 +199,7 @@ button:hover {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.2);
 }
 .popupForm {
     background-color: var(--white);
