--- a/styleANNOUNCEMENT.css
+++ b/styleANNOUNCEMENT.css
@@ -9,6 +9,9 @@
     --white: #F9F6EE;
     --grey: #696969;
     --bggreen: #90EE90;
+    --btnRed: #FFCCCB;
+    --btnGreen: #90EE90;
+    --lightergrey: #cccccc;
 }
 * {
     box-sizing: border-box;
@@ -28,102 +31,116 @@ body {
 /* Content Wrapper */
 .content-wrapper {
     width: 100%;
-    min-width: 1000px;
+    min-width: 1300px;
     height: 100vh;
     overflow: hidden;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+    display: flex;
 }
 
 /* Nav Wrapper */
 .nav-wrapper {
-    background-color: var(--white);
+    overflow: hidden;
+    z-index: 10;
+    background-color: var(--brown);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 3rem 0;
+    padding: 0rem;
     gap: 3rem;
-    border-right: 2px solid var(--black);
+    width: 0px;
+    transition: 0.1s ease-in-out;
+    position: relative;
+}
+.nav-wrapper * {
+    color: var(--white);
 }
 .icon-wrapper {
-    font-size: clamp(1.25rem, 0.7143rem + 1.7143vw, 2rem);
+    font-size: clamp(0.8rem, 0.5143rem + 0.9143vw, 1.2rem);
     font-weight: 900;
+
 }
 .nav-items {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    width: 100%;
 }
-.nav-items > button {
-    font-size: clamp(0.7rem, 0.4857rem + 0.6857vw, 1rem);
+.nav-items > div {
+    padding: 1rem 0.5rem;
     cursor: pointer;
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
-    border: unset;
-    font-weight: 600;
-    box-shadow: 0 2px 10px var(--grey);
-    transition: 200ms ease-in;
 }
-.nav-items > button:not(.active-btn) {
-    background-color: var(--pink);
-}
-/* Active Button */
+/* Active Div */
 .active-btn {
-    background-color: var(--brown);
+    background-color: rgba(255, 255, 255, 0.3);
     color: var(--white);
+    border-radius: 5px;
 }
-/* Button Hover */
-.nav-items > button:not(.active-btn):hover {
-    background-color: var(--brown);
-    color: var(--white);
+/* Div Hover */
+.nav-items > div:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+.close-nav {
+    position: absolute;
+    top: 1rem;
+    right: 2%;
+    font-size: 1.5rem;
 }
 
 
 /* Body Wrapper */
 .main-content {
     background-color: var(--white);
+    width: 100%;
     overflow: hidden auto;
     display: flex;
     flex-direction: column;
-    position: relative;
+}
+.main-content > *:not(.record-heading) {
     padding: 1rem 1%;
 }
 
 /* Main Content */
-.post-heading {
-    font-size: 2rem;
-    font-weight: 900;
-    margin-bottom: 10vh;
+.record-heading {
+    background-color: var(--brown);
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    padding: 1rem 1rem;
+}
+.internal-heading, .internal-heading * {
+    font-size: 1.3rem;
+    color: var(--white);
 }
 .floating-btn {
-    position: absolute;
-    top: 5vh;
-    right: 2%;
-    padding: 0.5rem 1rem;
-    border-radius: 25px;
-    border: none;
-    background-color: var(--pink);
+    position: fixed;
+    z-index: 10;
+    top: 5rem;
+    right: 1rem;
+    padding: 1rem;
+    border-radius: 5px;
     cursor: pointer;
-    box-shadow: 0 2px 10px var(--grey);
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: var(--lightergrey);
+    transition: 0.4s ease-in-out;
 }
 .floating-btn, .floating-btn i {
     transition: 0.3s ease-in;
     font-weight: 600;
 }
 .floating-btn:hover {
-    background-color: var(--brown);
-    color: var(--white);
-}
-.floating-btn:hover * {
-    color: var(--white);
+    text-decoration: underline;
 }
 .post-card {
+    margin: 0 12% 2rem;
     display: grid;
-    grid-template-columns: 1fr 2fr 0.5fr;
+    grid-template-columns: 0.5fr 2fr 0.5fr;
     gap: 1rem;
     padding: 0.5rem 1rem;
     border-radius: 10px;
-    box-shadow: 1px 4px 10px var(--grey);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     background-color: white;
     margin-bottom: 2rem;
 }
@@ -170,7 +187,7 @@ img {
     font-weight: 600;
     outline: none;
     border: none;
-    border-radius: 25px;
+    border-radius: 5px;
     transition: 0.4s ease-in-out;
     cursor: pointer;
 }
@@ -181,26 +198,26 @@ img {
     background-color: var(--pink);
 }
 .option-wrapper > form > button:hover {
-    scale: 1.1;
+    text-decoration: underline;
 }
 .empty-post {
-    width: 50%;
-    height: 40vh;
+    width: 30%;
+    height: 15rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: absolute;
     border-radius: 10px;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight: 900;
     background-color: white;
-    box-shadow: 0 2px 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .empty-post > span {
-    font-size: 2rem;
+    font-size: 1.2rem;
     text-align: center;
 }
 .empty-post > i {
